adding url links and fix logger singleton so tests run smoothly
