# apps/api/src/routes/api/v1/categories/categories.route.ts
@@ -53,7 +53,7 @@ export default async (
 
 			return reply.send({
 				data,
-				links: { self: request.url, next: null, prev: null },
+				links: { self: request.url },
 				meta: { count: data.length }
 			});
 		}
