# apps/api/src/routes/api/v1/users/_userId/categories/categories.route.ts
@@ -67,7 +67,7 @@ export default async (
 
 			return reply.send({
 				data,
-				links: { self: request.url, next: null, prev: null },
+				links: { self: request.url },
 				meta: { count: data.length }
 			});
 		}
